--- a/src/sections/portfolio/projectModal.css
+++ b/src/sections/portfolio/projectModal.css
@@ -287,8 +287,7 @@
   }
   .cover-image {
     object-fit: contain !important;
-    transform: scale(1.5);
-    padding-top: 50px;
+    width: 100% !important;
   }
   .overlay::before {
     content: " ";
@@ -364,10 +363,13 @@
 
   .projectmodal .projectmodal-image {
     width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
   }
 
   .projectmodal-footer {
-    width: 100vw;
+    width: 100%;
     height: auto;
     text-align: center;
   }
